# llvm-cuda-playground

./: .dockerignore  .gitignore  10-Day_Hands-On_Project_Guide.md  API.md  LICENSE  Readme.md  deploy.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: main.py  test_main.py
corpus/: README.md  build_corpus.sh
corpus/dag/: saxpy.json  stencil.json
corpus/src/: dotprod.c  saxpy.c  stencil.c
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: ARCHITECTURE.md  COST_MODEL.md  REPORT.md
docs/daily/: README.md  day-01.md
engine/: CMakeLists.txt  main.cpp
engine/backend/: AssemblyGenerator.cpp  AssemblyGenerator.h  PTXGenerator.cpp  PTXGenerator.h
engine/frontend/: Compiler.cpp  Compiler.h
engine/include/mirsched/: CostModel.h  Dag.h  Json.h  LinearScan.h  ListScheduler.h
engine/middleend/: Analyzer.cpp  Analyzer.h  Optimizer.cpp  Optimizer.h  Statistics.cpp  Statistics.h
engine/src/: CostModel.cpp  Dag.cpp  Json.cpp  LinearScan.cpp  ListScheduler.cpp
engine/tools/: mirsched-cli.cpp
frontend/app/: globals.css  layout.tsx  page.tsx
harness/: compare_llvm.py  plot.py  run_experiments.py
harness/configs/: cpu.json  gpu.json
pass/: CMakeLists.txt  ExtractDAG.cpp
tests/: test_framework.h  test_linearscan.cpp  test_main.cpp  test_scheduler.cpp
tests/golden/: chain.json  diamond.json
